fix(demo): fixes home height on small devices

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,7 +4,7 @@
 }
 
 section {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .color-1 {
